--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,11 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>App</title>
+    <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body background="blue">
   <div id="main">
-
+    <div id="login">
+      {{message}}
+    </div>
   </div>
 </body>
 
